--- a/src/main/webapp/WEB-INF/resources/css/parts/header.css
+++ b/src/main/webapp/WEB-INF/resources/css/parts/header.css
@@ -91,30 +91,49 @@
 	font-family: "Impact", Georgia, Serif;
 }
 
-.modalLogin {
+.modalBackground {
 	display: none;
 	position: absolute;
-	text-align: center;
-	width: 240px;
-	height: 200px;
-	margin-top: 200px;
-	left: 50%;
-	margin-left: -120px;
-	align-items: center;
-	background-color: #424242;
-	border-radius: 5px;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
 	pointer-events: none;
+	background: rgba(0, 0, 0, 0.5);
 }
 
-.modalLogin:target {
+.modalBackground:target {
 	display: inline-block;
 	pointer-events: auto;
 }
 
+.modalLogin {
+	display: inline-block;
+	position: absolute;
+	text-align: center;
+	width: 400px;
+	height: 400px;
+	top: 50%;
+	left: 50%;
+	margin-left: -200px;
+	margin-top: -200px;
+	background-color: #424242;
+	border-radius: 5px;
+}
+
 .modalLoginClose {
 	position: absolute;
-	top: 10px;
-	right: 10px;
+	top: 1px;
+	right: 1px;
+	height: 30px;
+	width: 30px;
+	font-size: 30px;
+	text-decoration: none;
+	color: white;
+}
+
+.modalLoginClose:visited {
+	text-decoration: none;
 }
 
 
