--- a/src/main/webapp/WEB-INF/resources/css/parts/header.css
+++ b/src/main/webapp/WEB-INF/resources/css/parts/header.css
@@ -136,15 +136,95 @@
 	text-decoration: none;
 }
 
+.modalLoginConfirm {
+	text-align: center;
+	display: inline-block;
+	background-color: rgba(0,0,0,0.7);
+	border-radius: 5px;
+	width: 105px;
+	height: 25px;
+	text-decoration: none;
+	margin-top: 370px;
+	color: white;
+	font-size: 20px;
+	letter-spacing: 4px;
+	cursor: pointer;
+	font-family: "Impact", Georgia, Serif;
+}
 
+.nameMailText {
+	text-align: center;
+	display: inline-block;
+	width: 230px;
+	height: 25px;
+	text-decoration: none;
+	color: white;
+	font-size: 20px;
+	position: absolute;
+	margin-top: 40px;
+	left: 50%;
+	margin-left: -115px;
+	letter-spacing: 4px;
+	font-family: "Impact", Georgia, Serif;
+}
 
+.passwordText {
+	text-align: center;
+	display: inline-block;
+	width: 120px;
+	height: 25px;
+	text-decoration: none;
+	color: white;
+	font-size: 20px;
+	position: absolute;
+	margin-top: 130px;
+	left: 50%;
+	margin-left: -60px;
+	letter-spacing: 4px;
+	font-family: "Impact", Georgia, Serif;
+}
 
+.captchaText {
+	text-align: center;
+	display: inline-block;
+	width: 100px;
+	height: 25px;
+	text-decoration: none;
+	color: white;
+	font-size: 20px;
+	position: absolute;
+	margin-top: 210px;
+	left: 50%;
+	margin-left: -50px;
+	letter-spacing: 4px;
+	font-family: "Impact", Georgia, Serif;
+}
 
+.nameMailArea {
+	text-align: center;
+	display: inline-block;
+	width: 300px;
+	height: 25px;
+	font-size: 20px;
+	position: absolute;
+	margin-top: 70px;
+	left: 50%;
+	margin-left: -150px;
+	border-radius: 5px;
+}
 
-
-
-
-
+.passwordArea {
+	text-align: center;
+	display: inline-block;
+	width: 300px;
+	height: 25px;
+	font-size: 20px;
+	position: absolute;
+	margin-top: 160px;
+	left: 50%;
+	margin-left: -150px;
+	border-radius: 5px;
+}
 
 
 
